Add PendingWriteQueueIndexingFactory.java